# ft_bot

./: README.md  docker-compose.yaml  main.py  pyproject.toml
app/internal/services/: bot.py  game.py  map.py
app/pkg/models/: player.py
app/pkg/settings/: settings.py
docker/python/: Dockerfile
